# trt_resnet18

./: README.md
trt_python/: get_onnx.py
trt_python/model/weights/: layer1.0.conv1.weight.wgt  layer1.0.conv2.weight.wgt  layer1.1.conv1.weight.wgt  layer2.1.bn2.running_var.wgt  layer2.1.conv1.weight.wgt  layer3.0.downsample.0.weight.wgt  layer3.1.conv1.weight.wgt  layer3.1.conv2.weight.wgt  layer4.0.downsample.0.weight.wgt
trt_resnet18/: CMakeLists.txt  resnet18.net
trt_resnet18/demo/: main.cpp
trt_resnet18/include/: tensorrt.hpp
trt_resnet18/src/: tensorrt.cpp
trt_resnet18/weights/: conv1.weight.wgt  fc.bias.wgt  fc.weight.wgt  layer1.1.bn2.running_var.wgt  layer1.1.conv2.weight.wgt  layer2.0.bn2.bias.wgt  layer2.0.conv1.weight.wgt  layer2.0.conv2.weight.wgt  layer2.0.downsample.0.weight.wgt  layer2.1.conv2.weight.wgt  layer3.0.bn1.weight.wgt  layer3.0.conv1.weight.wgt  layer3.0.conv2.weight.wgt  layer4.0.bn2.running_var.wgt
